--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vuexpro",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot"
+    "start": "webpack-dev-server --host 127.0.0.1 --disable-host-check"
   },
   "author": "Krunal Lathiya",
   "license": "ISC",
@@ -15,12 +16,12 @@
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.25.0",
     "cross-env": "^5.0.5",
+    "nodemon": "^2.0.20",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.2",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^2.3.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1"
-  },
-  "description": ""
+  }
 }
